Added send msg feature

--- a/Public/html/room.html
+++ b/Public/html/room.html
@@ -65,8 +65,8 @@
                     <button class="emoji-btn">
                         <i class="far fa-smile"></i>
                     </button>
-                    <input type="text" placeholder="+ Type a message here...">
-                    <button class="send-btn">
+                    <input id="msgInput" type="text" placeholder="+ Type a message here...">
+                    <button id="sendBtn"  class="send-btn">
                         <i class="fas fa-paper-plane"></i>
                     </button>
                 </div>
@@ -115,6 +115,7 @@
     </div>
 
     <script src="../js/room.js"></script>
+    <!-- <script src="../js/try.js"></script> -->
 </body>
 
 </html>
