Connected to MongoDB cluster and added update functionality

--- a/Public/html/room.html
+++ b/Public/html/room.html
@@ -114,6 +114,8 @@
         </div>
     </div>
 
+    <!-- IMPORTANT: Add Socket.io client script BEFORE your custom script -->
+    <script src="/socket.io/socket.io.js"></script>
     <script src="../js/room.js"></script>
     <!-- <script src="../js/try.js"></script> -->
 </body>
